completes major css updates

--- a/frontendMod2ProjectJapanForGithub/app.css
+++ b/frontendMod2ProjectJapanForGithub/app.css
@@ -1,35 +1,50 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+.update-form,
+.delete-form {
+  /* display: none; */
+}
+
+section {
+  width: 100%;
+  padding: 0 5rem;
+}
+
+footer {
+  margin-top: 1rem;
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+}
+
 .header {
-  padding:30px;
+  padding: 30px;
   text-align: center;
   background: #ff99ff;
   color: white;
   font-size: 50px;
-  font-family: 'Kaushan Script', cursive;
+  font-family: "Kaushan Script", cursive;
   border-style: outset;
   border-width: 8px;
-
 }
 .side-bar {
-  padding:12px;
+  padding: 12px;
   font-size: 20px;
-  font-family: 'Kaushan Script', cursive;
+  font-family: "Kaushan Script", cursive;
   border-style: outset;
   border-width: 6px;
-  position:relative;
+  position: relative;
 }
+
 h1 {
   position: center;
-  
-  
 }
 
 img {
   float: left;
-  left: 5px; 
-
+  left: 5px;
 }
-
 
 * {
   font-family: "Montserrat", sans-serif;
@@ -38,21 +53,6 @@ img {
 
 header {
   text-align: left;
-}
-
-.individual-review {
-  /* display: none; */
-}
-
-.nav-bar {
-  /* display: flex; */
-}
-
-.review-list {
-  /* display: flex;
-  flex-wrap: wrap;
-  flex-flow: wrap;
-  justify-content: space-around; */
 }
 
 .search-form {
@@ -64,10 +64,6 @@ header {
   justify-content: space-around;
   flex-flow: wrap;
   /* box-shadow: black; */
-}
-
-div {
-  /* border-style: solid; */
 }
 
 label {
